visual style inserting with bootstrap

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    Welcome!
+    <div class="row">
+        <div class="col-sm">
+            Welcome!
+        </div>
+        <div class="col-sm">
+            Welcome!
+        </div>
+        <div class="col-sm">
+            Welcome!
+        </div>
+    </div>
 {% endblock %}
