--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,7 +9,7 @@
             Welcome!
         </div>
         <div class="col-sm">
-            Welcome!
+            <a href="{% url 'logout' %}">Logout</a>
         </div>
     </div>
 {% endblock %}
