--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -6,7 +6,14 @@
             Welcome!
         </div>
         <div class="col-sm">
-            Welcome!
+            Hello {{ user.employee.name }}
+        </div>
+        <div class="col-sm">
+            {% if user.employee.company %}
+                <a href="{% url 'edit_company' user.employee.company.id %}">Edit company</a>
+            {% else %}
+                <a href="{% url 'create_company' %}">Create company</a>
+            {% endif %}
         </div>
         <div class="col-sm">
             <a href="{% url 'logout' %}">Logout</a>
