created employees link

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -14,6 +14,7 @@
             {% else %}
                 <a href="{% url 'create_company' %}">Create company</a>
             {% endif %}
+            <a href="{% url 'list_employees' %}">Employees Management</a>
         </div>
         <div class="col-sm">
             <a href="{% url 'logout' %}">Logout</a>
