created feature to delete employee

--- a/apps/employees/templates/employees/employee_list.html
+++ b/apps/employees/templates/employees/employee_list.html
@@ -5,5 +5,6 @@
 
     {% for employee in object_list %}
         <a href="{% url 'update_employee' employee.id %}">{{ employee }}</a>
+        <a href="{% url 'delete_employee' employee.id %}">Delete</a>
     {% endfor %}
 {% endblock %}
