implemented create employee

--- a/apps/employees/templates/employees/employee_list.html
+++ b/apps/employees/templates/employees/employee_list.html
@@ -7,4 +7,5 @@
         <a href="{% url 'update_employee' employee.id %}">{{ employee }}</a>
         <a href="{% url 'delete_employee' employee.id %}">Delete</a>
     {% endfor %}
+    <a href="{% url 'new_employee' %}" class="btn btn-info">New</a>
 {% endblock %}
