implemented departments list

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -15,6 +15,7 @@
                 <a href="{% url 'create_company' %}">Create company</a>
             {% endif %}
             <a href="{% url 'list_employees' %}">Employees Management</a>
+            <a href="{% url 'list_departments' %}">Employee Departments</a>
         </div>
         <div class="col-sm">
             <a href="{% url 'logout' %}">Logout</a>
